--- a/index.html
+++ b/index.html
@@ -225,6 +225,28 @@
                     <div class="content__text">
                         <p><b>— Гы-гы! Вот прямо-таки "всё человечество" объединится? Ага. Вам еду не санитары приносят, случайно?..</b></p>
                     </div>
+                    <h2>Однако здравствуйте!</h2>
+                    <div class="content__text">
+                        <p><b>Предупреждение: изложенный на этом сайте план действий выходит за рамки обывательских представлений о возможном. Сегодня уже стало реальностью многое из того что столетия назад могло показаться невероятным.</b></p>
+                    </div>
+                    <div class="content__text">
+                        <p>Представь, если человеку в XVI веке, который всю свою жизнь водит пешком караваны, донести идею, что, мол, все его товары и самих верблюдов можно доставить в пункт назначения не за десять дней, а за один час на большой железной птице, он не поверит в это, что ему не говори. Аргументация про аэродинамику, сопромат и производство авиационного керосина будет бесполезна. Потомственному караванщику просто нечем воспринять такую информацию, как и нечем воспринять, допустим, Сталину, что такое блокчейн, и почему с помощью КГБ невозможно контролировать все это DeFi и NFT безобразие. Для условного Сталина это все будет какая-то чушь, а ведь сколько таких столетий у человечества еще впереди, и скорость технологических изменений все нарастает… Нам сегодня сложно воспринять весь тот масштаб трансформаций, которые произойдут в будущем: для этого сейчас нет необходимой системы понятий и частично даже самих слов в языке.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Суть научно-технической реализации «вечной молодости» для всех и каждого, включая «как бы умерших», проста. В основе два посыла.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Подразумевается, что когда-нибудь, через сотни или тысячи лет, с помощью технологий будущего люди смогут не только излечивать все болезни, но и сумеют плавно корректировать сам биологический возраст человека до любого желаемого. Подразумевается также, что понятия «похороненные» и «умершие» – это не одно и то же… Это утверждение, разумеется, требует убедительного пояснения, что и будет сделано в тексте далее.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Саму изложенную на этом сайте концепцию способен понять даже школьник начальных классов, но вот с восприятием и принятием фундаментально нового у тебя, как и у Сталина в примере выше, могут возникнуть сложности. Караванщик из XVI века по твоему описанию способен будет примерно представить себе самолет, но вот поверить, что такая конструкция сможет летать, даже не размахивая крыльями, – это для него будет скорее рассказом о чуде.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Обсуждение личной смерти табуировано в обществе. Сама культура пропитана смертнической парадигмой, существуют психологические механизмы примирения, защиты, ритуалы и родовое самоопределение в слове «смертные». Возможно, все это уже начало проявляться в твоем скептическом отношении к прочитанному, а кому-то не позволило дочитать текст и до сюда. На этом присказка завершается, и каким бы ни было твое умонастроение, начинаем…</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Футуристический проект, описанный далее, основан на идеях Николая Фёдоровича Фёдорова, его «Философии общего дела», а также на мыслях русских космистов К. Э. Циолковского, В. В. Вернадского, Ф. М. Достоевского и других. Текстом этот базис было бы очень долго расписывать, но есть видео на 15 минут, обязательно посмотри его прежде, чем читать сайт далее – «Как русские философы-космисты развили идею человеческого бессмертия». Без этих основ воспринимать дальнейшее, вероятно, будет сложновато.</p>
+                    </div>
                 </div>
             </div>
         </section>
