--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/global.css?=v1">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title></title>
 </head>
-<body>
+<body class="">
     <main class="main">
         <section class="aside">
             <div class="aside__wrap">
@@ -246,6 +242,84 @@
                     </div>
                     <div class="content__text">
                         <p>Футуристический проект, описанный далее, основан на идеях Николая Фёдоровича Фёдорова, его «Философии общего дела», а также на мыслях русских космистов К. Э. Циолковского, В. В. Вернадского, Ф. М. Достоевского и других. Текстом этот базис было бы очень долго расписывать, но есть видео на 15 минут, обязательно посмотри его прежде, чем читать сайт далее – «Как русские философы-космисты развили идею человеческого бессмертия». Без этих основ воспринимать дальнейшее, вероятно, будет сложновато.</p>
+                    </div>
+                    <h3>Переформулирование задачи</h3>
+                    <div class="content__text">
+                        <p>Практическая, проектная философия Фёдорова имеет аспект, к которому непонятно как подступиться с инженерной точки зрения – речь про воскрешение умерших людей. Ключевая мысль этого сайта, что воскрешать не потребуется, если сделать так, чтобы никто не умирал, но при этом придется сохранить исторически сложившееся впечатление (иллюзию), что смерть присутствует. А вот это уже – совсем-совсем-совсем другая задача, и в такой формулировке достижение конечной цели станет намного проще что человечеству будет скорее под силу.</p>
+                    </div>
+                    <h3>Подмена</h3>
+                    <div class="content__text">
+                        <p>Очевидный факт – люди умирают. Однако может оказаться, что это вовсе не факт, а лишь такой фокус, обусловленный необходимостью технической реализации условного «бессмертия». Иллюзионист делает «невозможное» не с помощью волшебства и магии, а часто посредством манипуляции с вниманием: в момент самого трюка взор людей направлен не туда, где происходит основное событие или подмена, так и на похоронах, возможно, люди смотрят просто не туда…</p>
+                    </div>
+                    <div class="content__text">
+                        <p>В действительности все не так, как на самом деле.. и может оказаться, что в бессмертном мироздании каждому человеку важно пройти через момент «смерти», быть может, в этом есть глубокий смысл, или даже таков замысел…</p>
+                    </div>
+                    <h3>Кукла</h3>
+                    <div class="content__text">
+                        <p>Давай разберем «подмену» на практическом примере. Как сохранить жизнь условному дезертиру, если он уже стоит перед расстрельной командой? Базовый (упрощённый) алгоритм в два шага:</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Моментально «изъять» солдата из этого места и времени и поместить в другое. Концепт, как такое вообще возможно в принципе провернуть, будет описан дальше. Оставить на месте солдата внешне сильно похожее на оригинал искусственно созданное тело. Качество реализации бутафории (трупа) должно быть такого уровня, чтобы даже патологоанатом не смог заподозрить подмены, и определил причину «смерти».</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Современный уровень развития биотехнологий уже сегодня позволяет создавать сложные тканевые структуры и имплантировать их. На репродуктивное клонирование Homo Sapiens в большинстве стран наложен законодательный запрет, обусловленный этикой, хотя вырастить клона конкретного человека, в том числе без сознания (анэнцефалия), – задача практически выполнимая уже сегодня. Для будущих поколений напечатать на 3D-принтере или как-либо по-другому создать сложную биологическую структуру в виде тела человека, причем идеально точно внешне похожую копию, но не обладающую сознанием, представляется довольно-таки тривиальной задачей. Не так важно, какую именно из технологий для создания бутафории будут применять: главное, что это ВОЗМОЖНО. Тогда для «отмены смерти» в привычном понимании смысла этих слов остается ВОВРЕМЯ осуществить моментальную подмену реального человека на биокуклу (труп), очень похожую внешне на оригинал. Возможно, именно эту бутафорию всегда и хоронят. Как ты определишь, где оригинал, где копия если не способен заметить разницу?</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Еще несколько строк о шоке восприятия будущего. Тутанхамон был не самым глупым египтянином своего времени. Если ты стал бы рассказывать ему например про Москвичей в метро, про то как в чреве огромного железного червя находятся люди, а червь при этом быстро движется глубоко под землей и городом, а подданные в этом будущем все грамотные, и с помощью волшебных коробочек отправляют письмена другим людям, которые находятся очень далеко, а еще смотрят по коробочкам то, что происходило когда-то в прошлом и не там где они находятся сейчас.. Как бы преисполненный власти и пафоса фараон на тебя смотрел после таких рассказов.. Если бы ты рассказал, то же самое Папе Римскому, веке этак в XVI-м то тебя скорее всего обвинили бы в ереси, предали анафеме, и после непродолжительных пыток с быстрым конечно же отречением отправили бы на костер святой инквизиции.</p>
+                    </div>
+                    <h3>Фокус</h3>
+                    <div class="content__text">
+                        <p>В 1992 году вышел забавный фильм «Корпорация "Бессмертие“», другое его название – «Беглец с того света», жанр – фантастика. Автогонщик разбивается на соревнованиях под фиксацию видеокамер, но за мгновение до воспламенения бензинового ада обреченного гонщика переносят в будущее с целью украсть его тело. В том будущем якобы существует технология перепрошивки нейронной сети мозга с одной личности на другую, а со здоровыми телами у богатых и влиятельных был большой дефицит, как раз они по-тихому и приворовывали себе тела из прошлого.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Сегодня скорее представляется реальным ускоренно вырастить 22-летнего клона (анэнцефала), чтобы на это тело трансплантировать голову, точнее, связку головного и спинного мозга стареющего человека с целью заметно продлить его жизнь. Подобная задача возможно по силам даже современной хирургии, над ней работает Серджо Канаверо. Практическое же перемещение во времени выглядит гораздо более невероятной технологической процедурой, и для нее как раз таки слово «фантастика» сегодня более чем уместно.</p>
+                    </div>
+                    <h3>Время</h3>
+                    <div class="content__text">
+                        <p>Сможешь ли ты, никуда не подглядывая, дать полное исчерпывающее текстовое определение слову время? Попробуй…</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Если не с точки зрения психики, а с точки зрения физики, времени как такового, строго говоря, не существует вовсе – есть только пространственно-временной континуум, и эту неделимую связку довольно давно и подробно заформулировал Альберт Эйнштейн. Можно долго вникать и спорить про теории относительности, удивляться квантовым эффектам и парадоксам, возникающим от факта самого существования черных дыр, заземленным до уровня обывательского восприятия, в фильме «Интерстеллар»… Однако даже те физики и математики, которые сегодня находятся на острие когнитивной атаки, в фундаментальных вопросах сталкиваются со множеством непроясненного и парадоксального.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Наука – описывает свойства, а причины по большей части пока остаются неизвестными. Неизвестно даже, что такое гравитация и откуда берется эта сила: ее свойства нам известны, но из-за чего она возникает – нет. Сейчас, например, уже известно, что наблюдаемая вселенная расширяется, причем с ускорением, но что именно ее толкает в разные стороны, вопреки гравитации, к общему центру масс и толкает все быстрее – опять же, понимания нет. Что такое вообще "темная материя" и каковы ее свойства, а ведь наблюдаемая вселенная по большей части состоит из нее, а не из обычного вещества, знакомого нам. В физике есть концепция тахионов – частиц, которые всегда движутся выше скорости света, а значит, получается – из будущего в прошлое, нарушая сам принцип причинности и тем самым создавая пародоксы. Масса тахионов не отрицательная но мнимая, есть и такое понятие в математике, хотя физики сегодня допускают существование отрицательной массы с энергией.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Чем выше скорость обьекта, тем медленнее течет его относительное время, а при достижении скорости света оно и вовсе останавливается. Не особо укладывается в привычную нам логику, но с точки зрения элементарной частицы света фотона, время не существует физически. После того как фотон испускается он может существовать сотни миллиардов лет, (наших человеческих лет) однако для самого фотона проходит нулевой промежуток времени между испусканием и поглощением. Время для фотона полностью останавливается, а поскольку времени для фотона нет то ведь и расстояния для фотона тоже не существуют..</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Можно ли создать межвременной телепорт, используя пространственно-временные червоточины или же какие-то другие принципы? Можно ли вообще однозначно и точно ответить на этот вопрос сегодня? Даже авторитетное мнение какого-нибудь нобелевского лауреата вроде Г. Я. Перельмана, который на языке математики разговаривает лучше, чем на родном, не гарантирует точности оценки перспектив. Задумайся, ведь еще не так много десятилетий назад генетика в СССР была объявлена лженаукой, а несколько столетий назад самые просвещённые люди планеты считали, что солнце вращается вокруг земли. Сколько таких столетий и тысячелетий еще впереди?..</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Реальная «машина времени» для перемещений в будущее существует и работает уже сегодня, и хотя живого человека отправить на 100 лет вперед пока еще не можем (крионика не в счет), однако сам принцип, с помощью которого это возможно реализовать, давно экспериментально подтвержден. Суть известного эффекта в том, что если посадить человека в некую ракету способную разогнаться до околосветовых скоростей, то за неделю на такой скорости на земле пройдет около столетия, и, возвратившись на космодром, астронавт окажется в будущем.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Время неравномерно течет и вокруг нашей планеты, например, спутники GPS-навигации имеют на борту высокоточные атомные часы, но за счет того, что сами спутники быстро перемещаются относительно Земли, время на них течет чуток с другой скоростью, и это отклонение регулярно приходится даже корректировать специальным алгоритмом, чтобы вся навигационная система оставалась целостной и корректной. Эффекты перемещения во времени давно вошли в жизнь человечества, и с некоторыми их проявлениями, как мы видим, приходится даже бороться, а иначе твой смартфон показывал бы неверную геолокацию.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Важно отметить, что для технической реализации идеи воскрешения, практическое перемещение во времени — это не единственный возможный вариант! Существуют и принципиально иные подходы к той же задаче. Быть может, удастся как-то математически рассчитывать взаимное положение всех атомов у заметного куска пространства-времени. Получив таким образом слепок, точную схему тела конкретного человека за миг до того, что принято называть смертью. В последствии возможно реализовать «точку сборки» где по атомно вновь собрать абсолютно точно того же человека. Либо может удастся как-то выделить и сохранить нейрокоррелянт сознания, так называемую «материальную душу». Есть и другие перспективные пути как то, что сегодня принято называть «цифровое бессмертие».</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Даже в случае классических похорон (без подмены), нельзя со стопроцентной уверенностью утверждать, что сознание теряется необратимо и онтологически, без какой-либо в принципе возможности последующего достаточно точного или идеально точного воссоздания индивида. Хотя, конечно, сейчас общепринято думать иначе.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Но интереснее даже не сама инженерная возможность воскрешения, а те ПОСЛЕДСТВИЯ, которые из этого следуют. О них читай на следующей станице сайта.</p>
+                    </div>
+                    <div class="content__text">
+                        <p>С перемещениями в обратную сторону, т.е. в прошлое, пока все видится сильно сложнее и туманнее. Теория относительности Эйнштейна в принципе оставляет возможность совершить варп-путешествие, вернуться в прошлое. Астрофизик Стивен Хокинг также полагал, что это возможно, и описывал в своей книге. Как-то он даже устроил вечеринку для путешественников во времени. Говорят, приглашение не приняли. Возможно, гости из будущего решили не раскрывать себя, или раскрыли, но Стивен решил прессе об этом не рассказывать. Откуда мы вообще что-либо можем знать наверняка? Впрочем, что мешает тебе устроить подобную вечеринку самостоятельно, только подготовься хорошенько. ㋛</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Если такие гипервременные скачки окажутся возможны технически, то, вероятно, в каком-то объеме будет реализована и практика «изъятия»/подмены людей перед самой "смертью". Не важно, сколько денег это будет стоить и сколько столетий или тысячелетий для этого потребуется человечеству. Даже если на определенном этапе в будущем уже не останется людей в привычном понимании этого слова, а планету Земля унаследуют роботы с искусственным интеллектом, либо постлюди, трансчеловеки, или какие-то другие формы разумного, то своего рода «бекап» человека «классического» останется в прошлом, а вместе с этим и возможность его распаковать, и, быть может, кому-то в будущем это покажется более интересным, чем воссоздание людей.</p>
+                    </div>
+                    <h3>Последствия...</h3>
+                    <div class="content__text">
+                        <p>Достаточно всего нескольких человек вытащить из прошлого и с помощью технологий дать этим людям вечную молодость, океан времени, и тогда они рано или поздно потянут из прошлого к себе еще кого-нибудь, а через десятилетие, может, и еще кого-нибудь, став для новоприбывших своего рода проводниками в такой новый мир. В итоге получается своего рода лавина, распространение «рыбаков» в прогрессии. Имея неограниченный ресурс времени в будущем и другие неограниченные ресурсы вселенной, космическую экспансию, нанотехнологии, экономику изобилия и т.п., может получиться фактический дефицит тех, кого смогут вытащить из прошлого и укрыть от смерти в будущем. Причем этот дефицит может коснуться не только людей, даже самых первобытных, но и их домашних животных, а, возможно, и не только домашних…</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Кому вообще такое может оказаться интересным в будущем и зачем им это? Какой в этих «изъятьях» смысл? Да, может, и нет никакого смысла в этом и не существует «главного» смысла жизни, единого для всех. И это даже хорошо, потому что ты можешь выдумать свой или просто выбрать любой тебе подходящий смысл, можешь поделиться им и разделить его с кем-то, реализовать его в какой-то форме. Нашлось бы тебе занятие, будь море времени без необходимости работу работать? После всех этих путешествий, отдыха, или что бы не стояло у тебя в списке сегодняшних приоритетов. Представь, если бы появилось время остановится, перестать наконец барахтаться в суете и тонуть в ней, задуматься, выяснить, понять, попробовать что-то новое, или вспомнить, кто мы, откуда и зачем? Кто знает, может, окажется, что мы, люди, – одна большая семья, просто что-то мешало нам жить не по лжи, да по-людски…</p>
+                    </div>
+                    <div class="content__text">
+                        <p>Будущее.. оно будет невероятным, таким как сейчас его никто не ожидает. Показанное в фантастических фильмах, это лишь небольшая часть, кусочки пазлов от нашей обшей будущности.</p>
                     </div>
                 </div>
             </div>
