--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <link rel="stylesheet" href="css/media.css">
     <title></title>
 </head>
-<body class="">
+<body class="bodyBlack">
     <main class="main">
         <section class="aside">
             <div class="aside__wrap">
-                <div class="aside__logo">
-                    <img src="img/logo1.svg" alt="">
-                    <img src="img/logo2.svg" alt="">
-                </div>
+                <div class="aside__logo"></div>
                 <div class="aside__block">
                     <h5>Содержание</h5>
                     <div class="aside__accordeon">
@@ -140,15 +137,15 @@
                             Цвет
                         </h4>
                         <div class="color_items">
-                            <div class="item active">
+                            <div class="item" id="bodyColor1">
                                 <div class="color white"></div>
                                 <p>Белый</p>
                             </div>
-                            <div class="item">
+                            <div class="item active" id="bodyColor2">
                                 <div class="color black"></div>
                                 <p>Черный</p>
                             </div>
-                            <div class="item">
+                            <div class="item" id="bodyColor3">
                                 <div class="color silver"></div>
                                 <p>Серый</p>
                             </div>
@@ -159,6 +156,7 @@
                                 <div class="title">
                                     <div class="icon">
                                         <img src="img/font-icon.svg" alt="">
+                                        <img src="img/font-icon-black.svg" alt="">
                                     </div>
                                     Калиграфия
                                 </div>
@@ -168,6 +166,7 @@
                                 <div class="title">
                                     <div class="icon">
                                         <img src="img/font-icon2.svg" alt="">
+                                        <img src="img/font-icon2-black.svg" alt="">
                                     </div>
                                     Размер шрифта
                                 </div>
