--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="css/global.css?=v1">
     <link rel="stylesheet" href="css/media.css">
     <title></title>
@@ -166,6 +168,28 @@
                 <p><strong>Второй посыл:</strong> Подразумевается также, что понятия «похороненные» и «умершие» – это не одно и то же… Это утверждение, разумеется, требует убедительного пояснения, что и будет сделано в тексте далее.</p>
                 <p>Саму изложенную на этом сайте концепцию способен понять даже школьник начальных классов, но вот с восприятием и принятием фундаментально нового у тебя, как и у Сталина в примере выше, могут возникнуть сложности. Караванщик из XVI века по твоему описанию способен будет примерно представить себе самолет, но вот поверить, что такая конструкция сможет летать, даже не размахивая крыльями, – это для него будет скорее рассказом о чуде.</p>
                 <hr>
+            </div>
+            <div class="video_slider_wrap">
+                <div class="video_slider">
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                </div>
+                <p>Ил. 1. Когда смерть была обнулена, остались лишь гигантские структуры, построенные для тех, кто больше не знал, зачем жить. Он смотрел вниз — в бездну, где хранились забытые копии людей.</p>
+            </div>
+            <div class="container">
                 <h2 id="glava1">Глава 1. Обсуждение личной смерти</h2>
                 <p>Обсуждение личной смерти табуировано в обществе. Сама культура пропитана смертнической парадигмой, существуют психологические механизмы примирения, защиты, ритуалы и родовое самоопределение в слове «смертные». Возможно, все это уже начало проявляться в твоем скептическом отношении к прочитанному, а кому-то не позволило дочитать текст и до сюда. На этом присказка завершается, и каким бы ни было твое умонастроение, начинаем…</p>
                 <p>Футуристический проект, описанный далее, основан на идеях <strong>Николая Фёдоровича Фёдорова</strong>, его «Философии общего дела», а также на мыслях русских космистов <strong>К. Э. Циолковского</strong>, <strong>В. В. Вернадского</strong>, <strong>Ф. М. Достоевского</strong> и других. Текстом этот базис было бы очень долго расписывать, но есть видео на 15 минут, обязательно посмотри его прежде, чем читать сайт далее – <em>«Как русские философы-космисты развили идею человеческого бессмертия»</em>. Без этих основ воспринимать дальнейшее, вероятно, будет сложновато.</p>
@@ -173,6 +197,28 @@
                 <p>Практическая, проектная философия Фёдорова имеет аспект, к которому непонятно как подступиться с инженерной точки зрения – речь про воскрешение умерших людей.</p>
                 <p><strong>Ключевая мысль этого сайта:</strong> воскрешать не потребуется, если сделать так, чтобы никто не умирал, но при этом придется сохранить исторически сложившееся впечатление (иллюзию), что смерть присутствует. А вот это уже – совсем-совсем-совсем другая задача, и в такой формулировке достижение конечной цели станет намного проще что человечеству будет скорее под силу.</p>
                 <hr>
+            </div>
+            <div class="video_slider_wrap">
+                <div class="video_slider">
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                </div>
+                <p>Ил. 2. Извлечённый на грани гибели, он впервые взглянул на мир, где смерть была отменена… но человечность — под вопросом.</p>
+            </div>
+            <div class="container">
                 <h2 id="glava2">Глава 2. Подмена</h2>
                 <p>Очевидный факт – люди умирают. Однако может оказаться, что это вовсе не факт, а лишь такой фокус, обусловленный необходимостью технической реализации условного «бессмертия». Иллюзионист делает «невозможное» не с помощью волшебства и магии, а часто посредством манипуляции с вниманием: в момент самого трюка взор людей направлен не туда, где происходит основное событие или подмена, так и на похоронах, возможно, люди смотрят просто не туда…</p>
                 <blockquote>
@@ -190,6 +236,28 @@
                 <p>В 1992 году вышел забавный фильм <strong>«Корпорация "Бессмертие"»</strong>, другое его название – «Беглец с того света», жанр – фантастика. Автогонщик разбивается на соревнованиях под фиксацию видеокамер, но за мгновение до воспламенения бензинового ада обреченного гонщика переносят в будущее с целью украсть его тело. В том будущем якобы существует технология перепрошивки нейронной сети мозга с одной личности на другую, а со здоровыми телами у богатых и влиятельных был большой дефицит, как раз они по-тихому и приворовывали себе тела из прошлого.</p>
                 <p>Сегодня скорее представляется реальным ускоренно вырастить 22-летнего клона (анэнцефала), чтобы на это тело трансплантировать голову, точнее, связку головного и спинного мозга стареющего человека с целью заметно продлить его жизнь. Подобная задача возможно по силам даже современной хирургии, над ней работает <strong>Серджо Канаверо</strong>. Практическое же перемещение во времени выглядит гораздо более невероятной технологической процедурой, и для нее как раз таки слово «фантастика» сегодня более чем уместно.</p>
                 <hr>
+            </div>
+            <div class="video_slider_wrap">
+                <div class="video_slider">
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                </div>
+                <p>Ил. 3. Их встретил ржавый корабль, ставший крепостью тех, кто пережил обнуление мира. Под слоем льда и страха — последняя иллюзия приюта.</p>
+            </div>
+            <div class="container">
                 <h2 id="glava3">Глава 3. Время</h2>
                 <blockquote>
                     <p>Сможешь ли ты, никуда не подглядывая, дать полное исчерпывающее текстовое определение слову время? Попробуй…</p>
@@ -213,6 +281,28 @@
                 <p>С перемещениями в обратную сторону, т.е. в прошлое, пока все видится сильно сложнее и туманнее. Теория относительности Эйнштейна в принципе оставляет возможность совершить варп-путешествие, вернуться в прошлое. Астрофизик <strong>Стивен Хокинг</strong> также полагал, что это возможно, и описывал в своей книге. Как-то он даже устроил вечеринку для путешественников во времени. Говорят, приглашение не приняли. Возможно, гости из будущего решили не раскрывать себя, или раскрыли, но Стивен решил прессе об этом не рассказывать. Откуда мы вообще что-либо можем знать наверняка? Впрочем, что мешает тебе устроить подобную вечеринку самостоятельно, только подготовься хорошенько. ㋛</p>
                 <p>Если такие гипервременные скачки окажутся возможны технически, то, вероятно, в каком-то объеме будет реализована и практика «изъятия»/подмены людей перед самой "смертью". Не важно, сколько денег это будет стоить и сколько столетий или тысячелетий для этого потребуется человечеству. Даже если на определенном этапе в будущем уже не останется людей в привычном понимании этого слова, а планету Земля унаследуют роботы с искусственным интеллектом, либо постлюди, трансчеловеки, или какие-то другие формы разумного, то своего рода «бекап» человека «классического» останется в прошлом, а вместе с этим и возможность его распаковать, и, быть может, кому-то в будущем это покажется более интересным, чем воссоздание людей.</p>
                 <hr>
+            </div>
+            <div class="video_slider_wrap">
+                <div class="video_slider">
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                </div>
+                <p>Ил. 3. Они пришли не с оружием, а с вопросом: может ли дитя прошлого простить тех, кто заменил людей на функции?</p>
+            </div>
+            <div class="container">
                 <h2 id="glava4">Глава 4. Последствия...</h2>
                 <p class="no-indent">Достаточно всего нескольких человек вытащить из прошлого и с помощью технологий дать этим людям вечную молодость, океан времени, и тогда они рано или поздно потянут из прошлого к себе еще кого-нибудь, а через десятилетие, может, и еще кого-нибудь, став для новоприбывших своего рода проводниками в такой новый мир. В итоге получается своего рода лавина, распространение «рыбаков» в прогрессии. Имея неограниченный ресурс времени в будущем и другие неограниченные ресурсы вселенной, космическую экспансию, нанотехнологии, экономику изобилия и т.п., может получиться фактический дефицит тех, кого смогут вытащить из прошлого и укрыть от смерти в будущем. Причем этот дефицит может коснуться не только людей, даже самых первобытных, но и их домашних животных, а, возможно, и не только домашних...</p>
                 <blockquote>
@@ -348,6 +438,7 @@
         </section>
     </main>
     <script src="js/jquery.min.js"></script>
+    <script src="slick-1.8.1/slick/slick.min.js"></script>
     <script src="js/SmoothScroll.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
     <script src="js/main.js"></script>
@@ -359,6 +450,16 @@
         const scale = parseInt(slider.value);
         content.classList.remove('x1', 'x2', 'x3', 'x4', 'x5');
         content.classList.add(`x${scale}`);
+        });
+    </script>
+    <script>
+        $('.video_slider').slick({
+            infinite: false,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            speed: 800,
+            dots: false,
+            arrows: false,
         });
     </script>
 </body>
