--- a/index.html
+++ b/index.html
@@ -178,12 +178,22 @@
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider2.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider3.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider16.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider117.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                 </div>
@@ -202,17 +212,27 @@
                 <div class="video_slider">
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider4.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider5.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider6.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider15.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider18.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                 </div>
@@ -241,17 +261,27 @@
                 <div class="video_slider">
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider7.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider8.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider9.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider14.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider19.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                 </div>
@@ -286,17 +316,27 @@
                 <div class="video_slider">
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider10.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider11.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider.mp4" autoplay loop muted></video>
+                            <video src="img/slider12.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider13.mp4" autoplay loop muted></video>
+                        </div>
+                    </div>
+                    <div class="wrap">
+                        <div class="block">
+                            <video src="img/slider20.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                 </div>
@@ -454,7 +494,7 @@
     </script>
     <script>
         $('.video_slider').slick({
-            infinite: false,
+            infinite: true,
             slidesToShow: 1,
             slidesToScroll: 1,
             speed: 800,
