--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
             </div>
             <div class="video_slider_wrap">
                 <div class="video_slider">
-                    <div class="wrap">
+                    <!-- <div class="wrap">
                         <div class="block">
                             <video src="img/slider.mp4" autoplay loop muted></video>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="wrap">
                         <div class="block">
                             <video src="img/slider2.mp4" autoplay loop muted></video>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="wrap">
                         <div class="block">
-                            <video src="img/slider117.mp4" autoplay loop muted></video>
+                            <video src="img/slider17.mp4" autoplay loop muted></video>
                         </div>
                     </div>
                 </div>
@@ -500,6 +500,8 @@
             speed: 800,
             dots: false,
             arrows: false,
+            autoplay: true,
+            autoplaySpeed: 5000,
         });
     </script>
 </body>
