--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <button class="header__save"></button>
                         <button class="header__btn">
                             <div class="icon"></div>
-                            <span>Слушать аудио</span>
+                            <span>Play</span>
                         </button>
                     </div>
                 </div>
